fix: color contrast of the customization flex items

--- a/css/customization.css
+++ b/css/customization.css
@@ -34,7 +34,7 @@
 
 .customization-flex-item {
     flex: 1 1 300px;
-    background: var(--sightly-light-black);
+    background: var(--black);
     border-radius: 12px;
     padding: 24px;
     min-width: 240px;
